[gd_scene load_steps=4 format=3 uid="uid://che3is3jappko"]

[ext_resource type="Script" path="res://Prog76a.gd" id="1_b5tsj"]

[sub_resource type="Theme" id="Theme_oyu76"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_nyrsy"]
default_font_size = 30

[node name="Prog76a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5tsj")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -14.0
offset_top = 5.0
offset_right = 470.0
offset_bottom = 113.0
theme = SubResource("Theme_oyu76")
text = "Enter Number You Dislike:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblNum1" type="Label" parent="."]
layout_mode = 0
offset_left = 322.0
offset_top = 92.0
offset_right = 806.0
offset_bottom = 200.0
theme = SubResource("Theme_oyu76")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 162.0
offset_right = 740.0
offset_bottom = 270.0
theme = SubResource("Theme_oyu76")
text = "X              9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 259.0
offset_top = 209.0
offset_right = 743.0
offset_bottom = 317.0
theme = SubResource("Theme_oyu76")
text = "----------------------------------
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 266.0
offset_top = 377.0
offset_right = 750.0
offset_bottom = 485.0
theme = SubResource("Theme_oyu76")
text = "-------------------------------------------"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblTotal2" type="Label" parent="."]
layout_mode = 0
offset_left = 270.0
offset_top = 460.0
offset_right = 754.0
offset_bottom = 568.0
theme = SubResource("Theme_oyu76")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblTotal" type="Label" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 269.0
offset_right = 756.0
offset_bottom = 377.0
theme = SubResource("Theme_oyu76")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 323.0
offset_right = 783.0
offset_bottom = 431.0
theme = SubResource("Theme_oyu76")
text = "X       123456789"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 11.0
offset_right = 972.0
offset_bottom = 103.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 828.0
offset_top = 146.0
offset_right = 1038.0
offset_bottom = 266.0
theme = SubResource("Theme_nyrsy")
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 828.0
offset_top = 319.0
offset_right = 1038.0
offset_bottom = 439.0
theme = SubResource("Theme_nyrsy")
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 828.0
offset_top = 490.0
offset_right = 1038.0
offset_bottom = 610.0
theme = SubResource("Theme_nyrsy")
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
